--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "electron-check-biometric-auth-changed",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Query and handle native macOS biometric authentication changes.",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
+    "install": "",
     "build": "node-gyp rebuild",
     "clean": "node-gyp clean",
     "lint": "clang-format --dry-run -Werror auth.mm && prettier --check index.js",
@@ -47,8 +49,5 @@
     "*.mm": [
       "clang-format -i"
     ]
-  },
-  "os": [
-    "darwin"
-  ]
+  }
 }
